# fptcloud-hc-automation-main

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  PHASE_1_REPORT.md  README.md  __schema_inspect.py  __schema_out.json  checklist.yml  docker-compose.yml  healthcheck.toml  implementation-notes.md  log.html  pyproject.toml  quota-investigation-report.md  quytn13-test.pem  run-log.html  spec-coverage-report.md
config/: action_registry.yml
docs/: health-check-spec.md
memory/: MEMORY.md  dev-environment.md
modules/disk/: main.tf  outputs.tf  variables.tf
modules/floating_ip/: main.tf  outputs.tf  variables.tf  versions.tf
modules/object_storage/: main.tf  outputs.tf  variables.tf
modules/security_group/: main.tf  outputs.tf  variables.tf
modules/subnet/: main.tf  outputs.tf  variables.tf
modules/vm/: main.tf  outputs.tf  variables.tf
runs/: .gitkeep  fptcloud-api-url-explanation.html
runs/fptcloud-connect-check/: connect.auto.tfvars.example  instructions.html  main.tf
runs/hc-20260615-173657/: log.json
runs/hc-20260615-173724/: log.json
runs/hc-20260615-174621/: log.json
scripts/: chaos_kill_worker.sh  chaos_worker.py  check-fptcloud-connect.ps1  check_coverage.py  diagnose_health_inputs.py  print-effective-config.py  run_health_checks.py  validate_health_check_spec.py
specs/: 00-ARCHITECTURE.md  01-REQUIREMENTS.md  02-INFRASTRUCTURE.md  03-TASKS.md  04-TESTS.md  05-SPEC-GOVERNANCE.md  06-QUOTA-AWARE-ROLLING-STRATEGY.md  CHANGELOG.md  health-check.json
src/hc/: __init__.py  compat.py  db.py  producer.py  reaper.py  worker.py
src/healthcheck/: __init__.py  classification.py  cleanup.py  config.py  discovery.py  instance_runner.py  logging.py  models.py  object_storage_runner.py  reporting.py  runner.py  s3_client.py  spec_loader.py  stage_plan.py  state.py  terraform_executor.py
tests/: conftest.py
tests/integration/: test_queue_integration.py
tests/unit/: test_checklist.py  (+17 more)
(+26 files in other folders)
